--- a/index.html
+++ b/index.html
@@ -2,8 +2,42 @@
 <html lang="en">
 <head>
     <title>Session 3</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    Hi from session 3
+    <!-- CSS selectors -->
+    <div class="parent">
+        # Here parent starts
+        <div class="child1">
+            child1
+        </div>
+        <div class="child2">
+            child2
+            <div class="child1">
+                child1 inside child2 
+            </div>
+        </div>
+        <div class="child3">
+            child3
+        </div>
+    </div>
+    
+    <hr/>
+
+    <div class="parentnew">
+        # Here parent new starts
+        <div class="child1">
+            child1
+        </div>
+        <div class="child2">
+            child2
+        </div>
+        <div class="child3">
+            child3
+            <div class="child2">
+                child2 inside child3
+            </div>
+        </div>
+    </div>
 </body>
 </html>
