--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <!-- CSS box model -->
+
+    <!--  -->
     <div class="divStyle">
-        Hii
+        Hiii from div
     </div>
+    
+    <span class="spanStyle">
+        Hii
+    </span>
+    <span class="spanStyle">
+        Hii
+    </span>
+
+    <section>
+        Hi from section
+    </section>
+
+    
 </body>
 </html>
